objects/LLC_BI__Policy__c.object
<CustomObject>
    <description>This object stores policies used with Policy Management.</description>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>Administrators populate this optional text field with a description of the policy. By default, the value is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a description.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Policy_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Administrators populate this required lookup field with the policy type. By default, the value is blank.</description>
        <inlineHelpText>Select a policy type.</inlineHelpText>
        <label>Policy Type</label>
        <referenceTo>LLC_BI__Policy_Type__c</referenceTo>
        <relationshipLabel>Policies</relationshipLabel>
        <relationshipName>Policies</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Routing_Dimension_Values__c</fullName>
        <description>Administrators populate this required text field with the routing dimension values for this policy. By default, the value is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter routing dimension values for this policy, separated by commas.</inlineHelpText>
        <label>Routing Dimension Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>Users populate this required picklist with the status of a pricing strategy. By default, the value is Inactive.</description>
        <inlineHelpText>Select a status.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                    <default>true</default>
                    <label>Inactive</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Policy</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>